# boredroom

YT Automator 2.0/: .env.example  .gitignore  Makefile  SETUP.md  pyproject.toml
YT Automator 2.0/docs/superpowers/specs/: 2026-06-15-yt-automator-design.md
YT Automator 2.0/src/yt_automator/: __init__.py  config.py  models.py
YT Automator 2.0/src/yt_automator/optimizer/: bandit_optimizer.py
YT Automator 2.0/src/yt_automator/pipeline/: content_generator.py  media_sourcer.py  orchestrator.py  run_logger.py  subtitles.py  tts_engine.py  video_renderer.py  youtube_client.py
YT Automator 2.0/src/yt_automator/providers/: base.py  nasa_provider.py  pixabay_provider.py  wikimedia_provider.py
YT Automator 2.0/src/yt_automator/utils/: paths.py  text.py  time_utils.py
YT Automator 2.0/tests/: test_smoke.py
coding-projects/guitar-app/: CLAUDE.md
coding-projects/guitar-app/docs/superpowers/specs/: 2025-03-15-autoscroll-audio-integration-design.md
opencode-projects/boardom/src/app/: layout.tsx
opencode-projects/boardom/src/app/canvas/: page.tsx
opencode-projects/boardom/src/app/waiting/: page.tsx
opencode-projects/boardom/src/components/: LandingPage.tsx  WaitingScreen.tsx
opencode-projects/boardom/src/components/__tests__/: CanvasPage.test.tsx  LandingPage.test.tsx  StickerPanel.test.tsx  WaitingScreen.test.tsx
opencode-projects/boardom/src/components/canvas/: CanvasPage.tsx  DrawingToolbar.tsx  StickerPanel.tsx
opencode-projects/boardom/src/hooks/: useCanvasSync.ts  useMatchmaking.ts  usePeerConnection.ts
opencode-projects/boardom/src/lib/: session.ts
(+2 files in other folders)
