[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-automator-v2"
version = "0.1.0"
description = "Automated YouTube Shorts pipeline"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "google-genai>=1.0.0",
    "edge-tts>=6.1.15",
    "openai-whisper>=20240930",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.1",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.160.0",
    "google-api-core>=2.24.1",
    "schedule>=1.2.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
]

[project.scripts]
yta = "yt_automator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
